fixed video banner in about us mobile view
fixed overflowing title in mobile view

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -956,6 +956,9 @@
 	.video-banner-area {
 		height: 550px !important;
 	}
+	.about_us_video.jarallax {
+		height: 100%;
+	}
 	.top-navbar {
 		display: none;
 	}
